[TASK] Add content element Thumbnail Group

--- a/Resources/Public/Scss/Theme/_thumbnail-menu.scss
+++ b/Resources/Public/Scss/Theme/_thumbnail-menu.scss
@@ -62,7 +62,7 @@ $thumbnail-menu-caption-subtitle-color-focus: $thumbnail-menu-caption-subtitle-c
   }
 }
 
-.frame-type-menu_thumbnail_dir, .frame-type-menu_thumbnail_list {
+.frame-type-menu_thumbnail_dir, .frame-type-menu_thumbnail_list, .frame-type-thumbnail_group {
   &.frame-layout-0 {
     .thumbnail-menu-caption {
       position: absolute;
