--- a/Resources/Private/Partials/Form/MultiSelect.html
+++ b/Resources/Private/Partials/Form/MultiSelect.html
@@ -1,31 +1,33 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:formvh="http://typo3.org/ns/TYPO3/CMS/Form/ViewHelpers" data-namespace-typo3-fluid="true">
 <formvh:renderRenderable renderable="{element}">
 	<f:render partial="Field/Field" arguments="{element: element}" contentAs="elementContent">
-		<div class="select is-multiple">
+		<div class="{element.properties.elementClassAttribute}">
 			<f:if condition="{element.properties.prependOptionLabel}">
 				<f:then>
 					<f:form.select
 							property="{element.identifier}"
 							id="{element.uniqueIdentifier}"
-							class="{element.properties.elementClassAttribute} form-control"
 							options="{formvh:translateElementProperty(element: element, property: 'options')}"
 							multiple="multiple"
 							errorClass="{element.properties.elementErrorClassAttribute}"
 							additionalAttributes="{formvh:translateElementProperty(element: element, property: 'fluidAdditionalAttributes')}"
-							prependOptionLabel="{formvh:translateElementProperty(element: element, property: 'prependOptionLabel')}"
-							prependOptionValue="{formvh:translateElementProperty(element: element, property: 'prependOptionValue')}"
-					/>
+							optionsAfterContent="true"
+					>
+						<f:form.select.option selected="false" value="" data="{placeholder: 'true'}">{element.properties.prependOptionLabel}</f:form.select.option>
+					</f:form.select>
 				</f:then>
 				<f:else>
 					<f:form.select
 							property="{element.identifier}"
 							id="{element.uniqueIdentifier}"
-							class="{element.properties.elementClassAttribute} form-control"
 							options="{formvh:translateElementProperty(element: element, property: 'options')}"
 							multiple="multiple"
 							errorClass="{element.properties.elementErrorClassAttribute}"
 							additionalAttributes="{formvh:translateElementProperty(element: element, property: 'fluidAdditionalAttributes')}"
-					/>
+							optionsAfterContent="true"
+					>
+						<f:form.select.option selected="false" value="" data="{placeholder: 'true'}"><f:translate key="LLL:EXT:bulma_package/Resources/Private/Language/locallang.xlf:form.multiselect.defaultPlaceholder" /></f:form.select.option>
+					</f:form.select>
 				</f:else>
 			</f:if>
 		</div>
