[TASK] Upgrade modules to follow dependabot alert on nanoid and path-to-regex

--- a/Resources/Public/Contrib/slim-select/slimselect.scss
+++ b/Resources/Public/Contrib/slim-select/slimselect.scss
@@ -261,6 +261,10 @@
     height: 100%;
   }
 
+  &.ss-fixed {
+    position: fixed;
+  }
+
   &.ss-open-above {
     flex-direction: column-reverse;
     opacity: 1;
