--- a/Resources/Private/Layouts/Page/Default.html
+++ b/Resources/Private/Layouts/Page/Default.html
@@ -16,6 +16,7 @@
     <f:render partial="Structure/ScrollTop" arguments="{_all}" />
 
     <f:cObject typoscriptObjectPath="lib.bulmaPackage.codeAnalytics" />
+    <f:cObject typoscriptObjectPath="lib.bulmaPackage.matomo" />
 
 </f:spaceless>
 </html>
