--- a/Resources/Private/Templates/IndexedSearch/Search/Search.html
+++ b/Resources/Private/Templates/IndexedSearch/Search/Search.html
@@ -1,67 +1,70 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-      xmlns:is="http://typo3.org/ns/TYPO3/CMS/IndexedSearch/ViewHelpers" data-namespace-typo3-fluid="true">
+<html
+    xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
+    data-namespace-typo3-fluid="true"
+>
+
+<f:asset.script identifier="indexed_search_pagination" src="EXT:indexed_search/Resources/Public/JavaScript/pagination.js" />
+
 <f:alias map="{sword: searchParams.sword}">
-    <f:render partial="Form" arguments="{_all}"/>
+    <f:render partial="Form" arguments="{_all}" />
 </f:alias>
-<f:for each="{resultsets}" as="result">
+<f:for each="{resultsets}" as="result" key="freeIndexUid">
     <div class="content">
-    <f:if condition="{result.categoryTitle}">
-        <h1>{result.categoryTitle}</h1>
-    </f:if>
-    <f:if condition="{result.searchedInSectionInfo}">
-        <!-- show the info in which section was searched for -->
-        <p>{result.searchedInSectionInfo}</p>
-    </f:if>
+        <f:if condition="{result.categoryTitle}">
+            <h1 class="tx-indexedsearch-category">{result.categoryTitle}</h1>
+        </f:if>
+        <f:if condition="{result.searchedInSectionInfo}">
+            <!-- show the info in which section was searched for -->
+            <p>{result.searchedInSectionInfo}</p>
+        </f:if>
         <f:if condition="{result.count} > 0">
             <f:then>
                 <p>
-                    <is:pageBrowsingResults numberOfResults="{result.count}" currentPage="{searchParams.pointer}" resultsPerPage="{searchParams.numberOfResults}"/>
-                    {result.sectionText}
+                    <f:sanitize.html>
+                        <f:translate key="displayResults" arguments="{0: result.pagination.startRecordNumber, 1: result.pagination.endRecordNumber, 2: result.count}" />
+                    </f:sanitize.html>
                 </p>
                 <!-- render the anchor-links to the sections inside the displayed result rows -->
                 <f:if condition="{result.affectedSections}">
                     <div class="panel">
                         <f:for each="{result.affectedSections}" as="sectionData" key="sectionId">
-                            <a href="#anchor_{sectionId}" class="panel-block">
+                            <f:link.page class="panel-block" section="anchor_{sectionId}" addQueryString="1"
+                                                    argumentsToBeExcludedFromQueryString="{0: 'id'}">
                                 <span class="badge">
                                     {sectionData.1}
                                     <f:translate
-                                            key="{f:if(condition: '{sectionData.1} > 1', then: 'word_pages', else: 'word_pages')}"/>
+                                        key="{f:if(condition: '{sectionData.1} > 1', then: 'word_pages', else: 'word_pages')}"/>
                                 </span>
                                 <f:if condition="{sectionData.0}">
                                     <f:then>{sectionData.0}</f:then>
-                                    <f:else>
-                                        <f:translate key="result.unnamedSection"/>
-                                    </f:else>
+                                    <f:else><f:translate key="unnamedSection" /></f:else>
                                 </f:if>
-                            </a>
+                            </f:link.page>
                         </f:for>
                     </div>
                 </f:if>
                 <f:for each="{result.rows}" as="row">
                     <f:if condition="{row.isSectionHeader}">
                         <f:then>
-                            <h3 id="anchor_{row.sectionId}">
-                                <f:format.html>{row.sectionTitle}</f:format.html>
-                                <span class="tx-indexedsearch-result-count">
-                                    {row.numResultRows} <f:translate
-                                        key="{f:if(condition: '{row.numResultRows} > 1', then: 'result.pages', else: 'result.page')}"/>
-                                </span>
-                            </h3>
+                        <h3 id="anchor_{row.sectionId}">
+                            <f:format.html>{row.sectionTitle}</f:format.html>
+                            <span class="tx-indexedsearch-result-count">{row.numResultRows} <f:translate key="{f:if(condition: '{row.numResultRows} > 1', then: 'result.pages', else: 'result.page')}" /></span>
+                        </h3>
                         </f:then>
                         <f:else>
-                            <f:render partial="Searchresult" arguments="{row: row}"/>
+                            <f:render partial="Searchresult" arguments="{row: row, searchParams: searchParams, firstRow: firstRow}" />
                         </f:else>
                     </f:if>
                 </f:for>
                 <nav class="pagination is-centered">
-                    <is:pageBrowsing numberOfResults="{result.count}" maximumNumberOfResultPages="{settings.page_links}"
-                                     currentPage="{searchParams.pointer}" resultsPerPage="{searchParams.numberOfResults}"/>
+                    <f:if condition="{result.pagination.allPageNumbers -> f:count()} > 1">
+                        <f:render partial="Pagination" arguments="{pagination: result.pagination, searchParams: searchParams, freeIndexUid: freeIndexUid}" />
+                    </f:if>
                 </nav>
             </f:then>
             <f:else>
                 <div class="notification is-info">
-                    <f:translate key="result.noResult"/>
+                    <f:translate key="result.noResult" />
                 </div>
             </f:else>
         </f:if>
