--- a/Resources/Private/Templates/WebsiteElement/WebSiteStructuredData.html
+++ b/Resources/Private/Templates/WebsiteElement/WebSiteStructuredData.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 <f:if condition="{data.wsd_name}">
-<f:asset.script priority="true" identifier="webSiteStructuredData" type="application/ld+json">
+<f:asset.script priority="true" identifier="webSiteStructuredData" type="application/ld+json" useNonce="1">
 {
     "@context" : "https://schema.org",
     "@type" : "WebSite",
