[BUGFIX] Fix loop on services for SocialMediaButtons partial

--- a/Resources/Private/Partials/ContentElements/SocialMediaButtons.html
+++ b/Resources/Private/Partials/ContentElements/SocialMediaButtons.html
@@ -2,7 +2,8 @@
 <f:spaceless>
     <f:variable name="defaultServices"><f:if condition="{settings.defaultServices}"><f:split separator=",">{settings.defaultServices}</f:split></f:if></f:variable>
     <f:variable name="extraClasses"><f:if condition="{extraClasses}">{extraClasses}</f:if></f:variable>
-    <f:if condition="{services ? services : defaultServices}">
+    <f:variable name="services"><f:if condition="{services}"><f:then>{services}</f:then><f:else>{defaultServices}</f:else></f:if></f:variable>
+    <f:if condition="{services}">
         <div class="shareon {settings.wrapperClasses} {extraClasses ? extraClasses : settings.wrapperExtraClasses}">
             <f:if condition="!{label} && {label -> asd:data.isNull()} || {label}">
                 <p class="{settings.titleClasses}">
@@ -12,7 +13,7 @@
                     </f:if>
                 </p>
             </f:if>
-            <f:for each="{services ? services : defaultServices}" as="service">
+            <f:for each="{services}" as="service">
                 <a class="{service} {settings.services.common.linkClasses} {settings.services.{service}.linkClasses}" title="{f:translate(key: 'social_media_buttons.shareon.{service}', extensionName: 'bulma_package')}">
                     <span class="icon">
                         <i class="{settings.services.common.iconClasses} {settings.services.{service}.iconClasses}"></i>
